@@ -1,7 +1,8 @@
-# $Id: Makefile.am,v 1.6 2004/02/03 17:50:10 jklowden Exp $
+# $Id: Makefile.am,v 1.7 2004/12/15 15:03:19 freddy77 Exp $
 noinst_LTLIBRARIES=		libreplacements.la
 libreplacements_la_SOURCES=	iconv.c
 libreplacements_la_LDFLAGS=
 libreplacements_la_LIBADD=	@LTLIBOBJS@
 INCLUDES=			-I$(top_srcdir)/include
-EXTRA_DIST=			asprintf.c vasprintf.c atoll.c strtok_r.c 
+EXTRA_DIST=			asprintf.c vasprintf.c atoll.c strtok_r.c \
+	readpassphrase.c readpassphrase.h
